# template_ddd_fastapi

./: Dockerfile  docker-compose.yml  pyproject.toml
